--- a/public/index.html
+++ b/public/index.html
@@ -15,13 +15,13 @@
                     <i class="rocket outline icon"></i>
                     SpaceX Dashboard
                 </div>
-                <a class="iten" href="/">
+                <a class="item" href="/last-launch">
                     Last Launch
                 </a>
-                <a class="iten" href="/">
+                <a class="item" href="/upcoming-launch">
                     Upcoming Launch
                 </a>
-                <a class="iten" href="/">
+                <a class="item" href="/about">
                     About
                 </a>
             </div>
