Trying to get rocket to work

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
             <!--Navigation Menu-->
             <div class="ui four item inverted orange menu">
                 <div class="header item">
-                    <i class="rocket outline icon"></i>
+                    <i class="fas fa-rocket"></i>
                     SpaceX Dashboard
                 </div>
                 <a class="item" href="/last-launch">
