I don't like the orange

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="ui-container">
             <!--Navigation Menu-->
-            <div class="ui four item inverted orange menu">
+            <div class="ui four item inverted menu">
                 <div class="header item">
                     <i class="fas fa-rocket"></i>
                     SpaceX Dashboard
