--- a/public/index.html
+++ b/public/index.html
@@ -15,14 +15,14 @@
                     <i class="fas fa-rocket"></i>
                     SpaceX Dashboard
                 </div>
-                <a class="item" href="/last-launch">
-                    Last Launch
+                <a class="item" href="/">
+                    SpaceX Dashboard
+                </a>
+                <a class="item" href="/latest-launch">
+                    Latest Launch
                 </a>
                 <a class="item" href="/upcoming-launch">
                     Upcoming Launch
-                </a>
-                <a class="item" href="/about">
-                    About
                 </a>
             </div>
             <!-- Error Template -->
@@ -39,18 +39,18 @@
                 </div>
             </script>
             <!-- Last Launch -->
-            <script id="last-launch-template" type="text/x-handlebars-template">
-                <h1 class="ui header">Last Launch</h1>
+            <script id="dashboard-template" type="text/x-handlebars-template">
+                <h1 class="ui header">SpaceX Dashboard</h1>
                 <hr>
             </script>
             <!-- Upcoming Launch -->
-            <script id="upcoming-launch-template" type="text/x-handlebars-template">
-                <h1 class="ui header">Upcoming Launch</h1>
+            <script id="latest-launch-template" type="text/x-handlebars-template">
+                <h1 class="ui header">Latest Launch</h1>
                 <hr>
             </script>
             <!-- About -->
-            <script id="about-template" type="text/x-handlebars-template">
-                <h1 class="ui header">About</h1>
+            <script id="upcoming-launch-template" type="text/x-handlebars-template">
+                <h1 class="ui header">Upcoming Launch</h1>
                 <hr>
             </script>
             <!-- Application Root-->
