Trying out some changes

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
             <!--Navigation Menu-->
             <div class="ui four item inverted menu">
                 <div class="header item">
-                    <i class="fas fa-rocket"></i>
+                    <i class="rocket icon"></i>
                     SpaceX Dashboard
                 </div>
                 <a class="item" href="/">
@@ -38,17 +38,17 @@
                     </h2>
                 </div>
             </script>
-            <!-- Last Launch -->
+            <!-- SpaceX Dashboard -->
             <script id="dashboard-template" type="text/x-handlebars-template">
                 <h1 class="ui header">SpaceX Dashboard</h1>
                 <hr>
             </script>
-            <!-- Upcoming Launch -->
+            <!-- Latest Launch -->
             <script id="latest-launch-template" type="text/x-handlebars-template">
                 <h1 class="ui header">Latest Launch</h1>
                 <hr>
             </script>
-            <!-- About -->
+            <!-- Upcoming Launch -->
             <script id="upcoming-launch-template" type="text/x-handlebars-template">
                 <h1 class="ui header">Upcoming Launch</h1>
                 <hr>
