Adding a path to see if that works

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
                     <i class="rocket icon"></i>
                     SpaceX Dashboard
                 </div>
-                <a class="item" href="/">
+                <a class="item" href="/dash">
                     SpaceX Dashboard
                 </a>
                 <a class="item" href="/latest-launch">
