--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
                     <i class="rocket icon"></i>
                     SpaceX Dashboard
                 </div>
-                <a class="item" href="/dash">
+                <a class="item" href="/">
                     SpaceX Dashboard
                 </a>
                 <a class="item" href="/latest-launch">
@@ -39,7 +39,7 @@
                 </div>
             </script>
             <!-- SpaceX Dashboard -->
-            <script id="dashboard-template" type="text/x-handlebars-template">
+            <script id="dash-template" type="text/x-handlebars-template">
                 <h1 class="ui header">SpaceX Dashboard</h1>
                 <hr>
             </script>
