--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
             <div class="ui four item inverted menu">
                 <div class="header item">
                     <i class="rocket icon"></i>
-                    SpaceX Dashboard
+                    SpaceX Dashboard and Stats
                 </div>
                 <a class="item" href="/">
                     SpaceX Dashboard
